Only keep fullscreen for transients on top - not random group members

BUG: 293265
REVIEW: 103866